[project]
name = "marmiton_api"
version = "0.0.1"
authors = [
  { name="Aymeric Bringard", email="diadzine@gmail.com" },
]
description = "A convenient way to search for recipes on marmiton.org"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies= [
    "aiohttp",
    "beautifulsoup4",
    "requests",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/diadzine/marmiton_api"
"Bug Tracker" = "https://github.com/diadzine/marmiton_api/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
